--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "server:dev": "nodemon ./server/server.js",
     "build": "webpack -w --config ./client/webpack.config.js"
   },
   "repository": {
@@ -18,10 +19,14 @@
   },
   "homepage": "https://github.com/abazlinton/leaflet_example#readme",
   "devDependencies": {
+    "nodemon": "^1.17.5",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
   },
   "dependencies": {
-    "leaflet": "^1.3.1"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "leaflet": "^1.3.1",
+    "mongodb": "^3.1.0-beta4"
   }
 }
